# cms_protocol_emulator

./: .gitignore  README.md  config_signalling.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  test_tcp_manual.py
cms_protocol_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core/: base_mode_switcher.py  connection_handler.py
protocols/manitou/: handler.py  mode_switcher.py  parser.py  responses.py
protocols/masxml/: handler.py  mode_switcher.py  parser.py  responses.py
protocols/microkey/: handler.py  mode_switcher.py  parser.py  responses.py
protocols/sentinel/: handler.py  mode_switcher.py  parser.py  responses.py
protocols/sia_dc09/: handler.py  mode_switcher.py  parser.py  responses.py
scripts/: run_manitou.py  run_masxml.py  run_microkey.py  run_sentinel.py  run_sia.py
tests/: conftest.py
tests/integration/: test_E2E_masxml.py  test_E2E_sia.py  test_connection_handler.py
tests/protocols/masxml/: test_client.py
tests/utils/: test_config_loader.py  test_event_utils.py  test_mode_manager.py  test_registry_tools.py
utils/: command_server.py  config_loader.py  constants.py  event_utils.py  logger.py  media_logger.py  mode_manager.py  mode_switcher.py  registry_tools.py  stdin_listener.py  tools.py
